--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,10 @@
         android:text="支付"
         android:onClick="onAliPay"
         android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="wrap_content"
+        android:text="微信支付"
+        android:onClick="onWeChat"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
